Adding in files for seo and devices

--- a/angular.json
+++ b/angular.json
@@ -28,7 +28,20 @@
             "inlineStyleLanguage": "scss",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/android-chrome-192x192.png",
+              "src/android-chrome-512x512.png",
+              "src/apple-touch-icon.png",
+              "src/browserconfig.xml",
+              "src/favicon-16x16.png",
+              "src/favicon-32x32.png",
+              "src/mstile-150x150.png",
+              "src/safari-pinned-tab.svg",
+              "src/site.webmanifest",
+              "src/sw.js",
+              "src/sw.js.map",
+              "src/workbox-6b19f60b.js",
+              "src/workbox-6b19f60b.js.map"
             ],
             "styles": [
               "src/styles.scss"
